# PCViewer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dokumentation.docx  LICENSE.txt  README.md
PCViewer/: Attribute.hpp  BrushIsoSurfRenderer.cpp  BrushIsoSurfRenderer.h  Brushing.hpp  BubblePlotter.cpp  BubblePlotter.h  CMakeLists.txt  CameraNav.hpp  ClusterBundles.cpp  ClusterBundles.hpp  ClusterData.hpp  ClusteringWorkbench.cpp  ClusteringWorkbench.hpp  Color.h  ColorMaps.hpp  ColorPalette.cpp  ColorPalette.h  ColorPalette.h.autosave  CompressedData.hpp  CorrelationManager.cpp  CorrelationManager.hpp  CorrelationMatrixWorkbench.cpp  CorrelationMatrixWorkbench.hpp  Cylinder.h  DBScan.hpp  Data.hpp  DataClusterer.hpp  DataClusteringLoader.cpp  DataClusteringLoader.h  DataInterface.hpp  DataProjector.hpp  DatasetImport.hpp  DrawlistColorMatrixEditor.cpp  DrawlistColorMatrixEditor.hpp  DrawlistColorPalette.hpp  GpuBrusher.h  GpuRadixSorter.cpp  GpuRadixSorter.hpp  HClustering.hpp  HistogramManager.cpp  (+45 more)
PCViewer/cmake/: FindNetCDF.cmake  FindSDL2.cmake  pcviewer_glslangConfig.cmake
PCViewer/colorbrewer/: README.md  colorbrewer.h
PCViewer/compression/: BundlingCacheManager.cpp  BundlingCacheManager.hpp  CacheManagerInterface.hpp  CompressionRenderer.cpp  CompressionRenderer.hpp  CompressionWorkbench.cpp  CompressionWorkbench.hpp  Compressor.hpp  Constants.hpp  CsvLoader.cpp  CsvLoader.hpp  DataLoader.hpp  HashLeaderNode.cpp  HashLeaderNode.hpp  HashNode.cpp  HashNode.hpp  HashVectorLeaderNode.cpp  HashVectorLeaderNode.hpp  HierarchyBinManager.cpp  HierarchyBinManager.hpp  HierarchyCreateNode.hpp  HierarchyImportManager.cpp  HierarchyImportManager.hpp  HierarchyLoadManager.cpp  HierarchyLoadManager.hpp  HirarchyCreation.cpp  HirarchyCreation.hpp  HirarchyNode.cpp  HirarchyNode.hpp  LeaderNode.cpp  LeaderNode.hpp  NetCdfLoader.cpp  NetCdfLoader.hpp  VectorLeaderNode.cpp  VectorLeaderNode.hpp
PCViewer/config/: splines.hpp
PCViewer/debugData/: debug.csv
PCViewer/deriveData/: DeriveWorkbench.cpp  DeriveWorkbench.hpp  ExecutionGraph.hpp  MemoryView.hpp  NodeBase.hpp  NodeGraphExecution.hpp  Nodes.hpp  RegistryInit.cpp  db_scan.cpp  db_scan.hpp  gpu_execution.cpp  gpu_execution.hpp  gpu_execution.md  gpu_instructions.hpp  k_means.cpp  k_means.hpp
PCViewer/eigen-3.3.7/: CMakeLists.txt
PCViewer/fonts/: License.txt
PCViewer/glm/: CMakeLists.txt  License.txt
PCViewer/gpu_radix_sort/: CMakeLists.txt  FFX_ParallelSort.h  pack_binary_files.cmake  pack_binary_files.cmake.in  radix_pipeline.cpp  radix_pipeline.hpp  shaders.h
PCViewer/half/: half.hpp  half.inl
PCViewer/imgui/: CMakeLists.txt  License.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_widgets.cpp
PCViewer/imgui_file_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
PCViewer/imgui_nodes/: crude_json.cpp  crude_json.h  imgui_canvas.h  imgui_extra_math.h  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_api.cpp  imgui_node_editor_internal.h
PCViewer/largeVis/: ComputeBrusher.cpp  ComputeBrusher.hpp  CpuLineCounter.cpp  CpuLineCounter.hpp  DecompressManager.hpp  DrawlistUpdateCoupler.cpp  DrawlistUpdateCoupler.hpp  GPUBinCounts.hpp  HistogramDimensionReducer.cpp  HistogramDimensionReducer.hpp  IndBinManager.cpp  IndBinManager.hpp  LineCounter.cpp  LineCounter.hpp  OpenCompressedDataset.hpp  PriorityInfo.hpp  RenderLineCounter.cpp  RenderLineCounter.hpp  Renderer.cpp  Renderer.hpp  RoaringCounter.cpp  RoaringCounter.hpp  TimingInfo.hpp  UVecHasher.hpp
PCViewer/pipelines/: README.md  brusher.cpp  brusher.hpp  copy.hpp  distance_calculator.cpp  distance_calculator.hpp  histogram_counter.cpp  histogram_counter.hpp  parallel_coordinates_renderer.cpp  parallel_coordinates_renderer.hpp  scatterplot_renderer.cpp  scatterplot_renderer.hpp  tsne_compute.cpp  tsne_compute.hpp  tsne_options.hpp
PCViewer/rTree/: RTree.h  RTreeDynamic.h  RTreeUtil.h
PCViewer/radix/: radix.hpp
PCViewer/radix_sort/: radix_sort.hpp
PCViewer/roaringc/: CMakeLists_!.txt
PCViewer/shader/: 3d.comp  3d.frag  3d.vert  3dComp.spv  3dFrag.spv  3dVert.spv  band.frag  band.frag.spv  band.geom  band.geom.spv  band.vert  band.vert.spv  brush.comp  brushComp.spv  brushFracture.comp  brushFractureComp.spv  brushLasso.comp  brushLasso.spv  brushMultvar.comp  brushMultvarComp.spv  cluster_band.geom  cluster_band.geom.spv  cluster_band.vert  cluster_band.vert.spv  compile.bat  compile.sh  compr.frag  compr.geom  compr.geom.spv  compr.vert.spv  compressHuffman_decode.comp  compressHuffman_decode.comp.spv  compress_decodeTranspose.comp  compress_decodeTranspose.comp.spv  compression_DWTInverse.comp  compression_DWTInverse.comp.spv  compression_RLDecodeMultiScatter.comp  compression_RLDecodeScatter.comp  compression_RLDecodeScatter.comp.spv  compression_copy.comp  (+121 more)
PCViewer/shader_new/: CMakeLists.txt  brusher.comp  brusher.comp.spv  data_access.glsl  distance_calculator.comp  distance_calculator.comp.spv  histogram_counter.comp  histogram_counter.comp.spv  parallel_coordinates_histogram.frag  parallel_coordinates_histogram.frag.spv  parallel_coordinates_renderer.frag  parallel_coordinates_renderer.frag.spv  parallel_coordinates_renderer.vert  parallel_coordinates_renderer.vert.spv  parallel_coordinates_renderer_large.vert  parallel_coordinates_renderer_large.vert.spv  quad_forward.vert  quad_forward.vert.spv  scatterplot_forms.glsl  scatterplot_histogram_renderer.vert  scatterplot_histogram_renderer.vert.spv  scatterplot_renderer.frag  scatterplot_renderer.frag.spv  scatterplot_renderer.vert  scatterplot_renderer.vert.spv  splines.glsl  standard_buffer_refs.glsl  tsne_charges_qij.comp  tsne_charges_qij.comp.spv  tsne_common.glsl  tsne_copy_from_fft.comp  tsne_copy_from_fft.comp.spv  tsne_copy_to_fft.comp  tsne_copy_to_w.comp  tsne_copy_to_w.comp.spv  tsne_integration.comp  tsne_integration.comp.spv  tsne_interpolate_device.comp  tsne_interpolate_device.comp.spv  (+24 more)
doc/: iso.md  (+8 more)
(+337 files in other folders)
